manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: addressservice
  name: addressservice
spec:
  ports:
  - name: "8000"
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: addressservice
  type: ClusterIP
