manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: addressservice
spec:
  hosts:
  - "*"
  gateways:
  - addressservice-gateway
  http:
  - route:
    - destination:
        port:
          number: 8000
        host: addressservice.default.svc.cluster.local
